# UC-DFKI-NI-litter_assessment_service

./: Jenkinsfile  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
litter_assessment_service/: api.py  classification.py  configs.yaml  fields.py  plotting.py  preprocessing.py
litter_assessment_service/tests/: test_api.py
