# -*- coding: utf-8 -*-
[metadata]
name = litter_assessment_service
summary = Integration of DeepaaS API and litter assessment software
description-file =
    README.md
author = Carolin Leluschko
author-email = carolin.leluschko@dfki.de
version = 0.0.1
license = MIT
home-page = https://git.ni.dfki.de/cleluschko/litter_assessment_service
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    litter_assessment_service

[entry_points]
deepaas.v2.model =
    litter_assessment_service = litter_assessment_service.api
